# vgc-ai

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  REFERENCE_STUDY.md  TASKS.md  WORKFLOW.md  pyproject.toml
.claude/: settings.json
.claude/commands/: review-diff.md  scope-check.md  setup-showdown.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  loop_blocker.md  policy_idea.md
bench/: __init__.py  elo.py  round_robin_battle.csv  round_robin_battle.md  round_robin_selection.json  round_robin_teambuild.json  round_robin_teambuild_e30.json  run_championship.py  run_continuous.py  run_once.py  run_round_robin.py  run_selection_doubles_ab.py  run_selection_match.py  run_strategy_tournament.py  run_teambuild_ab.py  run_teambuild_round_robin.py  summary.py
docs/archive/: 2026-05-19-orphan-presentation-attempt.md  study_pokeenv.md
ops/: run_bench.sh  run_pr_handler.sh  run_proposer.sh  run_reviewer.sh
scripts/: train_tabular_mc.py  validate_competitor.py  validate_rules_competitor.py
src/vgc_ai/: cli.py  competitor.py  design_competitor.py  pr_auto_handler.py  proposer.py  reviewer.py
src/vgc_ai/agents/: random_agent.py
src/vgc_ai/eval/: duel.py  heuristic.py  matchup_table.py  minimax.py  roster_fingerprint.py  runner.py
src/vgc_ai/policies/: battle.py  heuristic.py  heuristic_det.py  heuristic_det_2ply.py  library_teambuild.py  meta_balance.py  registry.py  rule_balance.py  selection.py  tabular_mc.py  teambuild.py
src/vgc_ai/strategies/: __init__.py  registry.py
tests/: test_bench_summary.py  test_cli.py  test_competitor_smoke.py  test_damage_aware_selection.py  test_design_competitor.py  test_duel.py  test_elo.py  test_greedy_switch.py  test_greedy_switch_a.py  test_greedy_switch_b.py  test_greedy_switch_c.py  test_greedy_switch_d.py  test_heuristic_det.py  test_heuristic_det_2ply.py  test_library_teambuild.py  test_lp_minimax_selection.py  test_matchup_table.py  test_meta_threat_aware_selection.py  test_minimax.py  test_pr_auto_handler.py  test_proposer.py  test_reviewer.py  test_roster_fingerprint.py  test_rule_balance.py  test_run_strategy_tournament.py  test_runner_no_server.py  test_selection.py  test_smoke.py  test_strategies.py  test_tabular_mc.py  test_teambuild.py
tests/integration/: test_smoke_battle.py
