[project]
name = "vgc-ai"
version = "0.0.1"
description = "Competitor for the IEEE VGC AI Competition (CoG 2026), built on pokemon-vgc-engine (vgc2)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "gary5876" }]
keywords = ["pokemon", "vgc", "ieee-cog", "mcts", "game-ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "vgc2 @ git+https://gitlab.com/DracoStriker/pokemon-vgc-engine.git@b0b77f9ba0b6b1ae297255fd867a6a866e74bb66",
    "gymnasium~=1.0.0",
    "numpy~=2.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vgc_ai"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: tests that run a non-trivial number of simulated battles or championship epochs",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# vgc2 ships without type stubs; allow that
[[tool.mypy.overrides]]
module = ["vgc2.*"]
ignore_missing_imports = true
